package app.decorator;

public class PizzaBasic implements Pizza{

  @Override
  public String prepare() {
    
    return "Pizza Pepperoni ";
  }
  
}
