package app.decorator;

public class PizzaHawaiana implements Pizza{

  @Override
  public String prepare() {
    
    return "Pizza Hawaiana ";
  }
  
}
